Refactor: 판매글 조회 dto반환으로 변경